--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public\images\Footer_Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="images\Logo.png" />
     <link rel="stylesheet" href="/src/App.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InvestorSync</title>
